--- a/.htaccess
+++ b/.htaccess
@@ -11,3 +11,5 @@ RewriteCond %{REQUEST_FILENAME} -l [OR]
 RewriteCond %{REQUEST_FILENAME} -d
 RewriteRule ^.*$ - [NC,L]
 RewriteRule ^.*$ index.php [NC,L]
+php_flag display_startup_errors on
+php_flag display_errors on
